# raytracing

./: .gitignore  .gitmodules  CMakeLists.txt  build_inWindows.bat  imgui.ini  readme.md
assets/: smaple.mtl
assets/2cubes/: test.glb  test0.mtl  test1.glb  test1.mtl  test3.mtl  test4.mtl  test5.mtl
assets/cube/: cubeobj.mtl
include/: camera.h  material.h  model.h  shaderManager.h  tools.h
instance/texture/: main.cpp
lib/glad/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
shaders/: bl.frag  bl.vert  pathtracing.frag  pathtracing.vert
src/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  camera.cpp  camera.h  config.h  main.cpp  material.cpp  model.cpp  tools.cpp  tools.h
src/model/: light.h  mesh.cpp  scene.cpp  scene.h
src/modelManager/: light.cpp  material.cpp  material.h  mesh.h  scene.cpp  scene.h
src/shader/: SSBO.h  shader.h
src/shaderManager/: SSBO.cpp  shader.cpp  shader.h
src/shaders/: bl.frag  bl.vert  fragmentshader.glsl  pathtracing.frag  shaderManager.cpp  vertexshader.glsl  vertexshader.vert
test/: camera_test.cpp
